--- a/src/main/webapp/app/exam/participate/exam-participation.component.html
+++ b/src/main/webapp/app/exam/participate/exam-participation.component.html
@@ -49,7 +49,14 @@
             <div *ngIf="!disconnected" class="exam-footer connected">
                 <div class="container">
                     <div class="exam-footer-content">
-                        <p jhiTranslate="artemisApp.examParticipation.connected" class="mb-0"></p>
+                        <p
+                            *ngIf="isProgrammingExerciseWithOfflineIDE() && !isProgrammingExerciseWithCodeEditor(); else standardConnected"
+                            jhiTranslate="artemisApp.examParticipation.ideConnected"
+                            class="mb-0"
+                        ></p>
+                        <ng-template #standardConnected>
+                            <p jhiTranslate="artemisApp.examParticipation.connected" class="mb-0"></p>
+                        </ng-template>
                         <jhi-connection-status class="connection-status-exam-participation"></jhi-connection-status>
                     </div>
                 </div>
@@ -57,7 +64,22 @@
             <div *ngIf="disconnected" class="exam-footer disconnected">
                 <div class="container">
                     <div class="exam-footer-content">
-                        <p jhiTranslate="artemisApp.examParticipation.disconnected" class="mb-0"></p>
+                        <p *ngIf="!isProgrammingExercise()" jhiTranslate="artemisApp.examParticipation.disconnected" class="mb-0"></p>
+                        <p
+                            *ngIf="isProgrammingExerciseWithCodeEditor() && isProgrammingExerciseWithOfflineIDE()"
+                            jhiTranslate="artemisApp.examParticipation.disconnectedCodeEditorAndOfflineIDE"
+                            class="mb-0"
+                        ></p>
+                        <p
+                            *ngIf="isProgrammingExerciseWithCodeEditor() && !isProgrammingExerciseWithOfflineIDE()"
+                            jhiTranslate="artemisApp.examParticipation.disconnectedCodeEditorNoOfflineIDE"
+                            class="mb-0"
+                        ></p>
+                        <p
+                            *ngIf="!isProgrammingExerciseWithCodeEditor() && isProgrammingExerciseWithOfflineIDE()"
+                            jhiTranslate="artemisApp.examParticipation.disconnectedNoCodeEditor"
+                            class="mb-0"
+                        ></p>
                         <jhi-connection-status class="connection-status-exam-participation"></jhi-connection-status>
                     </div>
                 </div>
