fix issue with quiz container in print

--- a/src/main/webapp/content/scss/global.scss
+++ b/src/main/webapp/content/scss/global.scss
@@ -738,8 +738,7 @@ ngb-tooltip-window {
 }
 
 @media print {
-    body,
-    div {
-        display: block !important;
+    .container {
+        min-width: 0 !important;
     }
 }
