--- a/src/main/webapp/app/exam/participate/exam-participation.component.html
+++ b/src/main/webapp/app/exam/participate/exam-participation.component.html
@@ -13,35 +13,39 @@
             <!-- exam nav -->
             <!-- exercises -->
             <ng-container *ngIf="activeExercise.studentParticipations && activeExercise.studentParticipations[0]">
-                <ng-container [ngSwitch]="activeExercise.type">
-                    <jhi-exam-navigation-bar
-                        id="exam-navigation-bar"
-                        [exercises]="studentExam.exercises"
-                        [endDate]="exam.endDate"
-                        (onExerciseChanged)="onExerciseChange($event)"
-                    ></jhi-exam-navigation-bar>
-                    <ng-container *ngIf="_reload">
-                        <jhi-quiz-submission-exam
-                            *ngSwitchCase="QUIZ"
-                            [exercise]="activeExercise"
-                            [studentSubmission]="activeExercise.studentParticipations[0].submissions[0]"
-                        ></jhi-quiz-submission-exam>
-                        <jhi-text-editor-exam
-                            *ngSwitchCase="TEXT"
-                            [exercise]="activeExercise"
-                            [studentSubmission]="activeExercise.studentParticipations[0].submissions[0]"
-                        ></jhi-text-editor-exam>
-                        <jhi-modeling-submission-exam
-                            *ngSwitchCase="MODELING"
-                            [exercise]="activeExercise"
-                            [studentSubmission]="activeExercise.studentParticipations[0].submissions[0]"
-                        ></jhi-modeling-submission-exam>
-                        <jhi-programming-submission-exam
-                            *ngSwitchCase="PROGRAMMING"
-                            [exercise]="activeExercise"
-                            [studentParticipation]="activeExercise.studentParticipations[0]"
-                            [courseId]="courseId"
-                        ></jhi-programming-submission-exam>
+                <jhi-exam-navigation-bar
+                    id="exam-navigation-bar"
+                    [exercises]="studentExam.exercises"
+                    [endDate]="exam.endDate"
+                    (onExerciseChanged)="onExerciseChange($event)"
+                ></jhi-exam-navigation-bar>
+                <ng-container *ngFor="let exercise of studentExam.exercises; let i = index">
+                    <ng-container [ngSwitch]="activeExercise.type">
+                        <ng-container *ngIf="submissionComponentVisisted[i]">
+                            <div [class.collapse]="i !== activeExerciseIndex">
+                                <jhi-quiz-submission-exam
+                                    *ngSwitchCase="QUIZ"
+                                    [exercise]="activeExercise"
+                                    [studentSubmission]="activeExercise.studentParticipations[0].submissions[0]"
+                                ></jhi-quiz-submission-exam>
+                                <jhi-text-editor-exam
+                                    *ngSwitchCase="TEXT"
+                                    [exercise]="activeExercise"
+                                    [studentSubmission]="activeExercise.studentParticipations[0].submissions[0]"
+                                ></jhi-text-editor-exam>
+                                <jhi-modeling-submission-exam
+                                    *ngSwitchCase="MODELING"
+                                    [exercise]="activeExercise"
+                                    [studentSubmission]="activeExercise.studentParticipations[0].submissions[0]"
+                                ></jhi-modeling-submission-exam>
+                                <jhi-programming-submission-exam
+                                    *ngSwitchCase="PROGRAMMING"
+                                    [exercise]="activeExercise"
+                                    [studentParticipation]="activeExercise.studentParticipations[0]"
+                                    [courseId]="courseId"
+                                ></jhi-programming-submission-exam>
+                            </div>
+                        </ng-container>
                     </ng-container>
                 </ng-container>
             </ng-container>
