fix header bar jumping

--- a/src/main/webapp/app/exam/participate/exam-navigation-bar/exam-navigation-bar.component.scss
+++ b/src/main/webapp/app/exam/participate/exam-navigation-bar/exam-navigation-bar.component.scss
@@ -4,6 +4,7 @@
     z-index: 50;
 
     .remaining-time {
+        min-width: 160px;
         background: white;
         text-align: center;
     }
