--- a/src/main/webapp/app/exam/participate/exam-navigation-bar/exam-navigation-bar.component.html
+++ b/src/main/webapp/app/exam/participate/exam-navigation-bar/exam-navigation-bar.component.html
@@ -40,7 +40,7 @@
     </div>
     <div class="col-auto">
         <div class="row justify-content-end align-items-start pr-2">
-            <div class="col-auto">
+            <div class="col">
                 <button *ngIf="isProgrammingExercise(); else notAProgrammingExercise" class="btn btn-primary px-3 mb-2" (click)="saveExercise()">
                     {{ 'artemisApp.examParticipation.' + (exerciseIndex >= exercises.length - 1 ? 'submitLastExercise' : 'submitOtherExercise') | translate }}
                     <!-- TODO: do not show a "Save" button for offline only programming exercises, show continue -->
@@ -52,7 +52,7 @@
                 </ng-template>
             </div>
             <div class="col-auto h3 timer px-1" jhiTranslate="artemisApp.examParticipation.timer">Time Left:</div>
-            <div class="col-auto h3 m-0 text-overflow remaining-time mb-2 px-1" [class.critical]="criticalTime">
+            <div class="col-auto h3 m-0 text-overflow remaining-time mb-2 px-0" [class.critical]="criticalTime">
                 {{ displayTime$ | async }}
             </div>
         </div>
