--- a/src/main/webapp/app/exam/participate/exam-participation.component.html
+++ b/src/main/webapp/app/exam/participate/exam-participation.component.html
@@ -20,28 +20,28 @@
                     (onExerciseChanged)="onExerciseChange($event)"
                 ></jhi-exam-navigation-bar>
                 <ng-container *ngFor="let exercise of studentExam.exercises; let i = index">
-                    <ng-container [ngSwitch]="activeExercise.type">
-                        <ng-container *ngIf="submissionComponentVisisted[i]">
-                            <div [class.collapse]="i !== activeExerciseIndex">
+                    <ng-container *ngIf="submissionComponentVisisted[i]">
+                        <ng-container [ngSwitch]="exercise.type">
+                            <div [hidden]="i !== activeExerciseIndex">
                                 <jhi-quiz-submission-exam
                                     *ngSwitchCase="QUIZ"
-                                    [exercise]="activeExercise"
-                                    [studentSubmission]="activeExercise.studentParticipations[0].submissions[0]"
+                                    [exercise]="exercise"
+                                    [studentSubmission]="exercise.studentParticipations[0].submissions[0]"
                                 ></jhi-quiz-submission-exam>
                                 <jhi-text-editor-exam
                                     *ngSwitchCase="TEXT"
-                                    [exercise]="activeExercise"
-                                    [studentSubmission]="activeExercise.studentParticipations[0].submissions[0]"
+                                    [exercise]="exercise"
+                                    [studentSubmission]="exercise.studentParticipations[0].submissions[0]"
                                 ></jhi-text-editor-exam>
                                 <jhi-modeling-submission-exam
                                     *ngSwitchCase="MODELING"
-                                    [exercise]="activeExercise"
-                                    [studentSubmission]="activeExercise.studentParticipations[0].submissions[0]"
+                                    [exercise]="exercise"
+                                    [studentSubmission]="exercise.studentParticipations[0].submissions[0]"
                                 ></jhi-modeling-submission-exam>
                                 <jhi-programming-submission-exam
                                     *ngSwitchCase="PROGRAMMING"
-                                    [exercise]="activeExercise"
-                                    [studentParticipation]="activeExercise.studentParticipations[0]"
+                                    [exercise]="exercise"
+                                    [studentParticipation]="exercise.studentParticipations[0]"
                                     [courseId]="courseId"
                                 ></jhi-programming-submission-exam>
                             </div>
