Don't show hint button for exam exercises

--- a/src/main/webapp/app/exercises/programming/manage/programming-exercise-detail.component.html
+++ b/src/main/webapp/app/exercises/programming/manage/programming-exercise-detail.component.html
@@ -9,7 +9,7 @@
                 <jhi-external-submission class="mr-1" [exercise]="programmingExercise"></jhi-external-submission>
                 <button
                     type="submit"
-                    *ngIf="programmingExercise.isAtLeastInstructor"
+                    *ngIf="!isExamExercise && programmingExercise.isAtLeastInstructor"
                     [routerLink]="['/course-management', programmingExercise.course?.id, 'exercises', programmingExercise.id, 'hints']"
                     class="btn btn-info btn-sm mr-1"
                 >
