fix printing only one page in firefox

--- a/src/main/webapp/content/scss/global.scss
+++ b/src/main/webapp/content/scss/global.scss
@@ -741,4 +741,7 @@ ngb-tooltip-window {
     .container {
         min-width: 0 !important;
     }
+    .card {
+        display: block !important;
+    }
 }
