Fix magic race condition and do not load hints in only IDE mode

--- a/src/main/webapp/app/exam/participate/exercises/programming/programming-exam-submission.component.html
+++ b/src/main/webapp/app/exam/participate/exercises/programming/programming-exam-submission.component.html
@@ -28,6 +28,7 @@
     <jhi-programming-exercise-instructions
         *ngIf="exercise"
         [exercise]="exercise"
+        [exerciseHints]="exercise.exerciseHints"
         [participation]="studentParticipation"
         [personalParticipation]="true"
     ></jhi-programming-exercise-instructions>
