--- a/src/main/webapp/app/exam/participate/summary/exam-participation-summary.component.html
+++ b/src/main/webapp/app/exam/participate/summary/exam-participation-summary.component.html
@@ -1,7 +1,6 @@
 <div>
     <h2>
-        <span jhiTranslate="artemisApp.exam.examSummary.summaryCapital">SUMMARY</span>
-        {{ studentExam.exam.title }}
+        {{ 'artemisApp.exam.examSummary.yourSubmissionTo' | translate: { examTitle: studentExam.exam.title, studentName: studentExam.user.name } }}
         <button class="btn btn-primary float-right" (click)="printPDF()">
             <fa-icon [icon]="'print'"></fa-icon>
             <span jhiTranslate="artemisApp.exam.examSummary.exportPDF">Export PDF</span>
