--- a/src/main/webapp/app/exercises/programming/manage/code-editor/code-editor-instructor-container.component.html
+++ b/src/main/webapp/app/exercises/programming/manage/code-editor/code-editor-instructor-container.component.html
@@ -122,7 +122,13 @@
                 [participation]="selectedParticipation"
                 [btnSize]="ButtonSize.MEDIUM"
             ></jhi-programming-exercise-student-trigger-build-button>
-            <jhi-exercise-hint-student *ngIf="exercise && this.selectedRepository === REPOSITORY.ASSIGNMENT" [exerciseId]="exercise.id" class="mr-2"></jhi-exercise-hint-student>
+            <jhi-exercise-hint-student
+                *ngIf="exercise && this.selectedRepository === REPOSITORY.ASSIGNMENT"
+                [exerciseId]="exercise.id"
+                [exerciseHints]="exercise.exerciseHints"
+                class="mr-2"
+            >
+            </jhi-exercise-hint-student>
             <jhi-code-editor-actions
                 [buildable]="selectedRepository !== REPOSITORY.TEST"
                 [unsavedFiles]="unsavedFiles"
