--- a/src/main/webapp/app/exercises/shared/exercise-row-buttons/exercise-row-buttons.component.html
+++ b/src/main/webapp/app/exercises/shared/exercise-row-buttons/exercise-row-buttons.component.html
@@ -40,6 +40,16 @@
     </button>
 
     <button
+        type="submit"
+        *ngIf="examMode && exercise.type === exerciseType.PROGRAMMING"
+        [routerLink]="['/course-management', courseId, 'programming-exercises', exercise.id, 'test-cases']"
+        class="btn btn-info btn-sm mr-1"
+    >
+        <fa-icon [icon]="'pencil-alt'"></fa-icon>
+        <span class="d-none d-md-inline" jhiTranslate="artemisApp.programmingExercise.manageTestCases.title">Manage Test Cases</span>
+    </button>
+
+    <button
         *ngIf="(examMode || exercise.isAtLeastTutor) && exercise.type !== exerciseType.QUIZ"
         type="submit"
         [routerLink]="['/course-management', courseId, exercise.type + '-exercises', exercise.id]"
@@ -48,6 +58,7 @@
         <fa-icon [icon]="'eye'"></fa-icon>
         <span class="d-none d-md-inline" jhiTranslate="entity.action.view">View</span>
     </button>
+
     <button
         *ngIf="examMode && exercise.type === exerciseType.QUIZ"
         type="submit"
