Add max points to online editor for programming exercises

--- a/src/main/webapp/app/exercises/programming/shared/code-editor/layout/code-editor-grid.component.html
+++ b/src/main/webapp/app/exercises/programming/shared/code-editor/layout/code-editor-grid.component.html
@@ -3,6 +3,7 @@
     <nav class="editor-statusbar">
         <!-- Exercise title -->
         <span class="editor-statusbar__title">{{ exerciseTitle }}</span>
+        <span class="text-muted" *ngIf="exerciseMaxScore"> [{{ exerciseMaxScore }} {{ 'artemisApp.examParticipation.points' | translate }}] </span>
         <ng-content select="[editorNavbar]"> </ng-content>
     </nav>
 
