--- a/src/main/webapp/app/exam/participate/exam-participation.component.html
+++ b/src/main/webapp/app/exam/participate/exam-participation.component.html
@@ -17,7 +17,7 @@
                     <jhi-exam-navigation-bar
                         id="exam-navigation-bar"
                         [exercises]="studentExam.exercises"
-                        [endDate]="exam.endDate"
+                        [endDate]="endDate"
                         (onExerciseChanged)="onExerciseChange($event)"
                     ></jhi-exam-navigation-bar>
                     <ng-container *ngIf="_reload">
