--- a/src/main/webapp/app/exam/participate/summary/exam-participation-summary.component.html
+++ b/src/main/webapp/app/exam/participate/summary/exam-participation-summary.component.html
@@ -50,41 +50,62 @@
             <h6 right-body class="markdown-preview" *ngIf="exercise.problemStatement && exercise.type !== PROGRAMMING">
                 <span [innerHTML]="exercise.problemStatement! | htmlForMarkdown"></span>
             </h6>
-            <!-- Show submission of student - if no submission found -> display that student did not participate -->
-            <ng-container
-                *ngIf="
-                    exercise.type !== PROGRAMMING && getParticipationForExercise(exercise) && getSubmissionForExercise(exercise) && getSubmissionForExercise(exercise)?.submitted;
-                    else noSubmission
-                "
-            >
-                <!-- Text Exercise -->
-                <ng-container *ngIf="exercise.type === TEXT">
-                    <jhi-text-exam-summary [submission]="getSubmissionForExercise(exercise)"></jhi-text-exam-summary>
-                </ng-container>
-                <!-- Modeling Exercise -->
-                <ng-container *ngIf="exercise.type === MODELING">
-                    <jhi-modeling-exam-summary [exercise]="exercise" [submission]="getSubmissionForExercise(exercise)"></jhi-modeling-exam-summary>
-                </ng-container>
-                <!-- Quiz Exercise -->
-                <ng-container *ngIf="exercise.type === QUIZ">
-                    <jhi-quiz-exam-summary
+            <ng-container *ngIf="exercise.type !== PROGRAMMING">
+                <!-- Show submission of student - if no submission found -> display that student did not participate -->
+                <ng-container
+                    *ngIf="getParticipationForExercise(exercise) && getSubmissionForExercise(exercise) && getSubmissionForExercise(exercise)?.submitted; else noSubmission"
+                >
+                    <!-- Text Exercise -->
+                    <ng-container *ngIf="exercise.type === TEXT">
+                        <jhi-text-exam-summary [submission]="getSubmissionForExercise(exercise)"></jhi-text-exam-summary>
+                    </ng-container>
+                    <!-- Modeling Exercise -->
+                    <ng-container *ngIf="exercise.type === MODELING">
+                        <jhi-modeling-exam-summary [exercise]="exercise" [submission]="getSubmissionForExercise(exercise)"></jhi-modeling-exam-summary>
+                    </ng-container>
+                    <!-- Quiz Exercise -->
+                    <ng-container *ngIf="exercise.type === QUIZ">
+                        <jhi-quiz-exam-summary
+                            [exercise]="exercise"
+                            [exam]="studentExam.exam"
+                            [submission]="getSubmissionForExercise(exercise)"
+                            [resultsPublished]="resultsPublished"
+                        ></jhi-quiz-exam-summary>
+                    </ng-container>
+                    <!-- File Upload Exercise -->
+                    <ng-container *ngIf="exercise.type === FILE_UPLOAD">
+                        <jhi-file-upload-exam-summary [submission]="getSubmissionForExercise(exercise)"></jhi-file-upload-exam-summary>
+                    </ng-container>
+                    <jhi-complaint-interactions
+                        *ngIf="
+                            getSubmissionForExercise(exercise) &&
+                            exercise.type !== QUIZ &&
+                            studentExam.exam.examStudentReviewStart &&
+                            studentExam.exam.examStudentReviewEnd &&
+                            isAfterStudentReviewStart()
+                        "
+                        class="mb-2 mt-2 ml-3"
                         [exercise]="exercise"
-                        [exam]="studentExam.exam"
-                        [submission]="getSubmissionForExercise(exercise)"
-                        [resultsPublished]="resultsPublished"
-                    ></jhi-quiz-exam-summary>
+                        [participation]="getParticipationForExercise(exercise)"
+                        [exam]="examWithOnlyIdAndStudentReviewPeriod"
+                    >
+                    </jhi-complaint-interactions>
                 </ng-container>
-                <!-- File Upload Exercise -->
-                <ng-container *ngIf="exercise.type === FILE_UPLOAD">
-                    <jhi-file-upload-exam-summary [submission]="getSubmissionForExercise(exercise)"></jhi-file-upload-exam-summary>
+            </ng-container>
+            <ng-container *ngIf="exercise.type === PROGRAMMING">
+                <!--  relax condition for programming exercises for the case that we get a submissions from websockets, but last changes in exam were not submitted -->
+                <ng-container *ngIf="getParticipationForExercise(exercise) && getSubmissionForExercise(exercise); else noSubmission">
+                    <!-- Programming Exercise -->
+                    <jhi-programming-exam-summary
+                        [exercise]="exercise"
+                        [participation]="getParticipationForExercise(exercise)"
+                        [submission]="getSubmissionForExercise(exercise)"
+                    ></jhi-programming-exam-summary>
                 </ng-container>
                 <jhi-complaint-interactions
                     *ngIf="
-                        getSubmissionForExercise(exercise) &&
-                        exercise.type !== QUIZ &&
-                        studentExam.exam.examStudentReviewStart &&
-                        studentExam.exam.examStudentReviewEnd &&
-                        isAfterStudentReviewStart()
+                        exercise.assessmentType === AssessmentType.SEMI_AUTOMATIC;
+                        getSubmissionForExercise: exercise && studentExam.exam.examStudentReviewStart && studentExam.exam.examStudentReviewEnd && isAfterStudentReviewStart()
                     "
                     class="mb-2 mt-2 ml-3"
                     [exercise]="exercise"
@@ -92,15 +113,6 @@
                     [exam]="examWithOnlyIdAndStudentReviewPeriod"
                 >
                 </jhi-complaint-interactions>
-            </ng-container>
-            <!--  relax condition for programming exercises for the case that we get a submissions from websockets, but last changes in exam were not submitted -->
-            <ng-container *ngIf="exercise.type === PROGRAMMING && getParticipationForExercise(exercise) && getSubmissionForExercise(exercise); else noSubmission">
-                <!-- Programming Exercise -->
-                <jhi-programming-exam-summary
-                    [exercise]="exercise"
-                    [participation]="getParticipationForExercise(exercise)"
-                    [submission]="getSubmissionForExercise(exercise)"
-                ></jhi-programming-exam-summary>
             </ng-container>
             <ng-template #noSubmission>
                 {{ 'artemisApp.exam.examSummary.noSubmissionFound' | translate }}
