Disabled hand in button if submission not in time

--- a/src/main/webapp/app/exam/participate/exam-participation.component.html
+++ b/src/main/webapp/app/exam/participate/exam-participation.component.html
@@ -114,6 +114,7 @@
             [exam]="exam"
             [studentExam]="studentExam"
             [handInEarly]="handInEarly"
+            [handInPossible]="handInPossible"
             (onExamEnded)="onExamEndConfirmed()"
             (onExamContinueAfterHandInEarly)="toggleHandInEarly()"
         ></jhi-exam-participation-cover>
