--- a/src/main/webapp/app/exam/participate/exam-cover/exam-participation-cover.component.html
+++ b/src/main/webapp/app/exam/participate/exam-cover/exam-participation-cover.component.html
@@ -16,7 +16,7 @@
     </h2>
     <jhi-exam-timer class="col-md-3 justify-content-end" [isEndView]="!startView" [endDate]="graceEndDate" [criticalTime]="criticalTime"></jhi-exam-timer>
 </div>
-<div class="w-100 d-flex" *ngIf="!startView && !studentFailedToSubmit()">
+<div class="w-100 d-flex" *ngIf="!startView && !studentFailedToSubmit">
     <div class="col-md-3"></div>
     <p class="col-md-6 font-weight-bold" style="text-align: center;">
         <span jhiTranslate="artemisApp.examParticipation.submitFinalExam"></span>
@@ -37,10 +37,10 @@
     </h2>
     <jhi-exam-information [exam]="exam" [studentExam]="studentExam"></jhi-exam-information>
     <div><span style="display: table; margin-left: auto; margin-right: auto;" [innerHTML]="formattedGeneralInformation"></span></div>
-    <div *ngIf="studentFailedToSubmit()" class="mb-2 font-weight-bold text-danger">
+    <div *ngIf="studentFailedToSubmit" class="mb-2 font-weight-bold text-danger">
         {{ 'studentExam.submissionNotInTime' | translate }}
     </div>
-    <ng-container *ngIf="!studentFailedToSubmit()">
+    <ng-container *ngIf="!studentFailedToSubmit">
         <div class="d-flex justify-content-center">
             <input
                 [(ngModel)]="confirmed"
