center alerts on page

--- a/src/main/webapp/app/exam/participate/exam-participation.component.html
+++ b/src/main/webapp/app/exam/participate/exam-participation.component.html
@@ -121,7 +121,7 @@
         <jhi-exam-participation-summary *ngIf="isOver() && studentExam.submitted" [studentExam]="studentExam"></jhi-exam-participation-summary>
     </ng-container>
     <ng-template #alert>
-        <div class="d-flex my-2">
+        <div class="d-flex justify-content-center mt-2 mb-4">
             <jhi-alert></jhi-alert>
         </div>
     </ng-template>
