Show error in client if submitting exam failed. Update Exam Page if student failed to submit on time (#1944)

--- a/src/main/webapp/app/exam/participate/exam-participation.component.html
+++ b/src/main/webapp/app/exam/participate/exam-participation.component.html
@@ -114,13 +114,14 @@
             [exam]="exam"
             [studentExam]="studentExam"
             [handInEarly]="handInEarly"
+            [handInPossible]="handInPossible"
             (onExamEnded)="onExamEndConfirmed()"
             (onExamContinueAfterHandInEarly)="toggleHandInEarly()"
         ></jhi-exam-participation-cover>
         <jhi-exam-participation-summary *ngIf="isOver() && studentExam.submitted" [studentExam]="studentExam"></jhi-exam-participation-summary>
     </ng-container>
     <ng-template #alert>
-        <div class="d-flex my-2">
+        <div class="d-flex justify-content-center mt-2 mb-4">
             <jhi-alert></jhi-alert>
         </div>
     </ng-template>
