--- a/src/main/webapp/app/exercises/text/assess-new/text-submission-assessment.component.html
+++ b/src/main/webapp/app/exercises/text/assess-new/text-submission-assessment.component.html
@@ -46,8 +46,8 @@
 
     <div class="row mt-3">
         <div class="col-md-6">
-            <jhi-unreferenced-feedback [(feedbacks)]="unreferencedFeedback" (feedbacksChange)="validateFeedback()"></jhi-unreferenced-feedback>
-            <jhi-assessment-general-feedback [(feedback)]="generalFeedback" (feedbackChange)="validateFeedback()"></jhi-assessment-general-feedback>
+            <jhi-unreferenced-feedback [(feedbacks)]="unreferencedFeedback" (feedbacksChange)="validateFeedback()" [readOnly]="!canOverride"></jhi-unreferenced-feedback>
+            <jhi-assessment-general-feedback [(feedback)]="generalFeedback" (feedbackChange)="validateFeedback()" [readOnly]="!canOverride"></jhi-assessment-general-feedback>
         </div>
     </div>
 </ng-template>
